--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,15 @@
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
+    <!-- GSON dependency -->
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.10.1</version>
+    </dependency>
   </dependencies>
+  
+
 
   <build>
     <plugins>
